gap propery issue in safari is fix

--- a/css/queries.css
+++ b/css/queries.css
@@ -188,3 +188,18 @@
         grid-row: 1;
     }
 }
+
+/* fix for gap proprty for safari */
+
+@media (max-width: 75em) {
+    .no-flexbox-gap .main-nav-list li:not(:last-child) {
+        margin-right: 3.2rem;
+    }
+}
+
+@media (max-width: 59em) {
+    .no-flexbox-gap .main-nav-list li:not(:last-child) {
+        margin-right: 0;
+        margin-bottom: 4.8rem;
+    }
+}
