--- a/css/style.css
+++ b/css/style.css
@@ -340,6 +340,7 @@
 /* ****************** */
 
 .section-testimonial {
+  padding-top: 8rem;
   background-color: #fae5d3;
   display: grid;
   grid-template-columns: 55fr 45fr;
@@ -515,6 +516,7 @@
 
 .section-cta {
   padding-bottom: 9.6rem;
+  padding-top: 9.6rem;
 }
 
 .cta {
@@ -671,4 +673,42 @@
 .address {
   margin-bottom: 2.4rem;
   font-size: 1.4rem;
+}
+
+/* gap porpery fix for safari browser */
+
+.no-flexbox-gap .main-nav-list li:not(:last-child) {
+  margin-right: 4.8rem;
+}
+
+.no-flexbox-gap .list-item:not(:last-child) {
+  margin-bottom: 1.6rem;
+}
+
+.no-flexbox-gap .list-icon:not(:last-child) {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .delivered-faces {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .meal-attribute:not(:last-child) {
+  margin-bottom: 2rem;
+}
+
+.no-flexbox-gap .meal-icon {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .footer-row div:not(:last-child) {
+  margin-right: 6.4rem;
+}
+
+.no-flexbox-gap .social-links li:not(:last-child) {
+  margin-right: 2.4rem;
+}
+
+.no-flexbox-gap .footer-nav li:not(:last-child) {
+  margin-bottom: 2.4rem;
 }
